Changes to be committed: 	modified:   sql/04_reservation.sql 	modified:   sql/README.md 	modified:   src/main/java/com/spring/mvc/controller/AuthController.java         modified:   src/main/java/com/spring/mvc/controller/ProfileController.java 	modified:   src/main/java/com/spring/mvc/controller/ReservationController.java 	modified:   src/main/java/com/spring/mvc/model/Flight.java 	modified:   src/main/java/com/spring/mvc/model/Passenger.java 	modified:   src/main/java/com/spring/mvc/model/Reservation.java 	modified:   src/main/java/com/spring/mvc/repository/ReservationRepository.java 	modified:   src/main/java/com/spring/mvc/service/ReservationService.java 	new file:   src/main/java/dto/RegistrationDto.java 	modified:   src/main/resources/static/css/main.css 	new file:   src/main/resources/static/js/editpassword.js 	new file:   src/main/resources/static/js/password-validation.js 	modified:   src/main/resources/templates/fragments/footer.html 	modified:   src/main/resources/templates/fragments/header.html 	modified:   src/main/resources/templates/index.html 	modified:   src/main/resources/templates/profile.html 	modified:   src/main/resources/templates/register.html 	modified:   src/main/resources/templates/reservation-form.html 	modified:   src/main/resources/templates/reservation-list.html

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,7 +14,7 @@ Submission Date: 2025-10-30
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h5>FlightBook</h5>
+                <h5>NicoAirlines</h5>
                 <p>Your trusted flight reservation platform</p>
             </div>
             <div class="col-md-4">
@@ -27,12 +27,12 @@ Submission Date: 2025-10-30
             </div>
             <div class="col-md-4">
                 <h5>Contact</h5>
-                <p>Email: support@flightbook.com<br>
-                Phone: 1-800-FLY-BOOK</p>
+                <p>Email: support@nicoairlines.com<br>
+                Phone: 1-800-NICO-AIRLINES</p>
             </div>
         </div>
         <hr>
-        <p>&copy; 2025 FlightBook. All rights reserved. | Developed by Carl Nicolas Mendoza</p>
+        <p>&copy; 2025 NicoAirlines. All rights reserved.</p>
     </div>
 </footer>
 
